--- a/twitter-clone/network/templates/network/index.html
+++ b/twitter-clone/network/templates/network/index.html
@@ -24,12 +24,14 @@
                     </div>
                     {% if user == post.author %}
                         <div class="postEdit">
-                            Edit
+                            <button>Edit</button>
+                        </div>
+                    {% else %}
+                        <div class="postAuthor">
+                            {{ post.author }}
                         </div>
                     {% endif %}
-                    <div class="postAuthor">
-                        {{ post.author }}
-                    </div>
+                    
                     <div class="postDate">
                         {{ post.date_time }}
                     </div>
