fixed number likes on the  posts and added padding to posts

--- a/twitter-clone/network/static/network/styles.css
+++ b/twitter-clone/network/static/network/styles.css
@@ -3,6 +3,8 @@
 }
 .post{
     border: 2px solid lightgrey;
+    padding: 1em;
+    margin-top: 1em;
 }
 #postings{
     border: 2px solid lightgray;
