--- a/twitter-clone/network/templates/network/index.html
+++ b/twitter-clone/network/templates/network/index.html
@@ -36,7 +36,7 @@
                         {{ post.date_time }}
                     </div>
                     <div class="postLikes">
-                       {{ post.likes }}
+                       {{ post.num_likes }}
                     </div>
                 </div>
             {% endfor %}
