--- a/twitter-clone/network/static/network/styles.css
+++ b/twitter-clone/network/static/network/styles.css
@@ -1,5 +1,6 @@
 .postText{
     font: 20px bold Arial, sans-serif;
+    display: block;
 }
 .post{
     border: 2px solid lightgrey;
@@ -23,4 +24,8 @@
     right:      0;
     bottom:     0;
     margin:    0.5em;
+}
+#editPostInput{
+    display: none;
+    margin-bottom: 1em ;
 }
