--- a/twitter-clone/network/templates/network/index.html
+++ b/twitter-clone/network/templates/network/index.html
@@ -18,13 +18,14 @@
     {% if Posts %}
         <div id="postings">
             {% for post in Posts %}
-                <div class="post">
+                <div class="post" data-postId= {{ post.id }}>
                     <div class="postText">
                         {{ post.text }}
                     </div>
+                    <textarea type="textarea" class="form-control" id="editPostInput"  placeholder="" ></textarea>
                     {% if user == post.author %}
                         <div class="postEdit">
-                            <button type="button"  class="btn btn-primary editPostBtn">Edit</button>
+                            <button type="button"  class="btn btn-primary " id="editPostBtn"  >Edit</button>
                         </div>
                     {% else %}
                         <div class="postAuthor">
