--- a/twitter-clone/network/templates/network/profile.html
+++ b/twitter-clone/network/templates/network/profile.html
@@ -3,7 +3,7 @@
 {% block body %}
     {% if user.is_authenticated %}
         <div>
-            <h2>{{  user.username  }}</h2>  <button type="button" class="btn btn-primary">Follow</button>
+            <h2>{{  user_name  }}</h2>  <button type="button" class="btn btn-primary">Follow</button>
         </div>
         <div>
             Followers: {{ num_followers }}  Following: {{ num_following }}
@@ -12,7 +12,7 @@
 
         {% if user_posts %}
             <div id="postings">
-                <h3>{{ user.username }}'s Posts</h3>
+                <h3>{{ user_name }}'s Posts</h3>
                 {% for post in user_posts %}
                     <div class="post" data-postId= {{ post.id }}>
                         <div class="postText">
