--- a/twitter-clone/network/templates/network/profile.html
+++ b/twitter-clone/network/templates/network/profile.html
@@ -3,7 +3,14 @@
 {% block body %}
     {% if user.is_authenticated %}
         <div>
-            <h2>{{  user_name  }}</h2>  <button type="button" class="btn btn-primary">Follow</button>
+            <h2 id="usernameHeading" data-userid= {{ user_id }}>{{  user_name  }}</h2>  
+            {% if user.username != user_name %}
+                {% if user in followers %}
+                    <button type="button" class="btn btn-primary" id="followUserBtn">Unfollow</button>
+                {% else %}
+                    <button type="button" class="btn btn-primary" id="followUserBtn">Follow</button>
+                {% endif %}
+            {% endif %}
         </div>
         <div>
             Followers: {{ num_followers }}  Following: {{ num_following }}
@@ -19,9 +26,11 @@
                             {{ post.text }}
                         </div>
                         <textarea type="textarea" class="form-control" id="editPostInput"  placeholder="" ></textarea>
-                        <div class="postEdit">
-                            <button type="button" class="btn btn-primary " id="editPostBtn">Edit</button>
-                        </div>
+                        {% if user == post.author %}
+                            <div class="postEdit">
+                                <button type="button"  class="btn btn-primary" id="editPostBtn">Edit</button>
+                            </div>
+                        {% endif %}
                         <div class="postDate">
                             {{ post.date_time }}
                         </div>
