--- a/twitter-clone/network/static/network/styles.css
+++ b/twitter-clone/network/static/network/styles.css
@@ -7,6 +7,7 @@
     border: 2px solid lightgrey;
     padding: 1em;
     margin-top: 1em;
+    background-color: white;
 }
 .postEdit{
     margin-bottom: 1em;
@@ -15,6 +16,7 @@
     border: 2px solid lightgray;
     margin: 2em;
     padding: 2em;
+    background-color: rgb(185, 224, 248);
 }
 #newPostForm{
     border: 2px solid lightgray;
