--- a/twitter-clone/network/templates/network/layout.html
+++ b/twitter-clone/network/templates/network/layout.html
@@ -10,10 +10,10 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Network</a>
+        <nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">"Twitter"</a>
           
-            <div>
+            <div id="navbar-items">
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
